# memman

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CONTRIBUTING.md  FALSE_POSITIVE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  live-claude.yml  release.yml
docs/: DESIGN.md  USAGE.md
docs/design/: 01-background.md  01-vision.md  02-concepts.md  02-philosophy.md  03-concepts.md  03-graph-model.md  04-graph-model.md  04-pipelines.md  05-lifecycle.md  05-pipelines.md  06-integration.md  06-lifecycle.md  07-integration.md  08-decisions.md
docs/diagrams/: 01-system-architecture.drawio  02-remember-pipeline.drawio  03-smart-recall-pipeline.drawio  04-magma-four-graph.drawio  05-llm-supervised.drawio  06-lifecycle-retention.drawio  07-diff-dedup-pipeline.drawio  07-three-layer-integration.drawio  08-insight-edge-datamodel.drawio  08-three-layer-integration.drawio  09-insight-edge-datamodel.drawio  11-two-layer-architecture.drawio  llm-supervised-concept.drawio
scripts/: e2e_test.sh  extract_antonyms.py  import_sqlite_to_postgres.py  rebuild_stale.py  visualize_graph.py
src/memman/: __init__.py  _http.py  cli.py  config.py  doctor.py  drain_lock.py  exceptions.py  extras.py  maintenance.py  migrate.py  model.py  queue.py  session.py  trace.py
src/memman/embed/: __init__.py  _thresholds_generated.py  fingerprint.py  ollama.py  openai_compat.py  openrouter.py  registry.py  swap.py  thresholds.py  vector.py  voyage.py
src/memman/graph/: bfs.py  causal.py  engine.py  enrichment.py  entity.py  semantic.py  temporal.py
src/memman/llm/: client.py  extract.py  openrouter_cache.py  openrouter_client.py  openrouter_models.py  shared.py
src/memman/migrate/: __init__.py
src/memman/pipeline/: __init__.py  remember.py
src/memman/rerank/: __init__.py  voyage.py
src/memman/search/: keyword.py  quality.py  recall.py
src/memman/setup/: _atomic.py  archive.py  claude.py  deploy.py  detect.py  markdown.py  nanoclaw.py  openclaw.py  per_store_bootstrap.py  prompt.py  scheduler.py  settings.py  wizard.py
src/memman/setup/assets/claude/: SKILL.md  compact.sh  exit_plan.sh  guide.md  prime.sh  stop.sh  task_recall.sh  user_prompt.sh
src/memman/setup/assets/nanoclaw/: SKILL.md  container-skill.md
src/memman/setup/assets/nanoclaw/hooks/: prime.sh  stop.sh  user_prompt.sh
src/memman/setup/assets/openclaw/: SKILL.md
src/memman/setup/assets/openclaw/hooks/memman-prime/: HOOK.md  handler.js
src/memman/setup/assets/openclaw/plugin/: index.js  openclaw.plugin.json  package.json
src/memman/store/: backend.py  base.py  config.py  db.py  edge.py  errors.py  factory.py  model.py  node.py  oplog.py  postgres.py  snapshot.py  sqlite.py
src/mnemon/: cli.py  doctor.py
src/mnemon/embed/: __init__.py  openai.py  voyage.py
src/mnemon/graph/: causal.py  engine.py  enrichment.py  entity.py  semantic.py  temporal.py
src/mnemon/llm/: client.py  extract.py
src/mnemon/search/: antonyms.py  diff.py  intent.py  keyword.py  recall.py
src/mnemon/setup/: claude.py  settings.py
src/mnemon/setup/assets/claude/: SKILL.md  compact.sh  exit_plan.sh  guide.md  prime.sh  stop.sh  task_recall.sh  user_prompt.sh
src/mnemon/setup/assets/nanoclaw/: container-skill.md
src/mnemon/setup/assets/openclaw/: SKILL.md
src/mnemon/store/: db.py  edge.py  node.py  oplog.py
tests/: _migrate_helpers.py  conftest.py  test_artifact.py  test_atomicity.py  test_backend_protocol_shape.py  test_backend_registry.py  test_cli.py  test_cli_new_groups.py  test_cli_store_subcommands.py  test_config.py  test_config_resolver.py  test_config_set.py  test_consolidation.py  test_db.py  test_db_lightweight.py  test_defer_e2e.py  test_doctor.py  test_doctor_env_completeness.py  test_doctor_hardening.py  test_drain_lock.py  test_edge_cleanup.py  test_edge_neighborhood.py  test_embed.py  test_embed_fingerprint.py  test_embed_openai.py  test_embed_openrouter.py  test_embed_thresholds.py  test_embed_voyage.py  test_enriched_at.py  test_enrichment.py  test_expand_cache.py  test_extras.py  test_fingerprint.py  test_float_parity_gate.py  test_graph_causal.py  test_graph_engine.py  test_graph_entity.py  test_graph_integration.py  test_graph_link.py  test_hnsw_index.py  (+81 more)
tests/e2e/: Dockerfile.nanoclaw  conftest.py  helpers.py  test_claude_hooks_deterministic.py  test_cli_milestones.py  test_migrate_flow.py  test_nanoclaw_container.py  test_openclaw_install.py  test_postgres_advisory_lock.py  test_postgres_dim_skew.py  test_postgres_drain_keepalive.py  test_postgres_fingerprint.py  test_postgres_multistore.py  test_postgres_round_trip.py  test_postgres_version_skew.py  test_postgres_wipe.py  test_postgres_write_lock.py
tests/embed/: test_drain_credential_missing.py  test_open_binds_from_fingerprint.py  test_prepare.py  test_registry.py  test_storectx_fingerprint_heartbeat.py  test_swap_cli.py  test_swap_postgres.py  test_swap_sqlite.py
tests/fixtures/: postgres.py
tests/store/: test_backend_protocol_shape.py  test_base_defaults.py  test_config_validation.py  test_oplog_deltas.py
