[tool.poetry]
name = "memman"
version = "0.12.1"
description = "Persistent memory for LLM agents"
authors = ["bissli"]
license = "MIT"
readme = "README.md"
packages = [{include = "memman", from = "src"}, {include = "scripts"}]
include = ["src/memman/setup/assets/**/*"]

[tool.poetry.scripts]
memman = "memman.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
cachetools = "^5.3"
click = "^8.1"
httpx = "^0.27"
numpy = ">=1.26"
tqdm = "^4.66"
psycopg = {version = ">=3.2", extras = ["binary"], optional = true}
psycopg-pool = {version = ">=3.2", optional = true}
pgvector = {version = ">=0.3", optional = true}

[tool.poetry.extras]
postgres = ["psycopg", "psycopg-pool", "pgvector"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
matplotlib = "^3.8"
networkx = "^3.2"
testcontainers = "^4.14.2"
mypy = "^1.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "no_mock_llm: skip the autouse OpenRouterClient.complete mock; keep ZDR + embedding stubs",
    "no_scheduler_started_mock: skip the autouse scheduler-started mock; tests run with the real read_state",
    "no_autoseed_fingerprint: skip the autouse meta.embed_fingerprint seed; exercises raw assert_consistent semantics",
    "no_auto_drain: skip the autouse post-write drain wrapper; tests inspect pre-drain queue state",
    "no_default_env: skip the autouse env-file seed; config.get returns None for unset keys",
    "e2e_cli: end-to-end CLI tests run via subprocess against the installed memman; no Docker required",
    "e2e_container: end-to-end tests that build/run a Docker container via testcontainers",
    "systemd: tests that require systemd-as-PID-1 (privileged container); opt-in only",
    "live_claude: tests that invoke a real Anthropic Claude Code session (requires ANTHROPIC_API_KEY)",
    "postgres: tests requiring the pgvector testcontainer (install via memman[postgres])",
]
