[tool.poetry]
name = "memman"
version = "0.16.3"
description = "LLM-supervised persistent memory for AI agents - intent-aware graph recall, RAG, and pluggable embeddings for Claude Code, OpenClaw, and NanoClaw."
authors = ["bissli"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/bissli/memman"
repository = "https://github.com/bissli/memman"
documentation = "https://github.com/bissli/memman/blob/master/docs/DESIGN.md"
keywords = [
    "ai",
    "ai-agents",
    "agent-memory",
    "agents",
    "llm",
    "memory",
    "long-term-memory",
    "rag",
    "embeddings",
    "vector-search",
    "semantic-search",
    "knowledge-graph",
    "claude",
    "claude-code",
    "anthropic",
    "openai",
    "pgvector",
    ]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: Indexing",
    "Typing :: Typed",
    ]
packages = [{include = "memman", from = "src"}, {include = "scripts"}]
include = ["src/memman/setup/assets/**/*"]

[tool.poetry.scripts]
memman = "memman.cli:cli"

[tool.poetry.dependencies]
python = "^3.11"
cachetools = "^5.3"
click = "^8.1"
httpx = "^0.27"
numpy = ">=1.26"
tqdm = "^4.66"
psycopg = {version = ">=3.2", extras = ["binary"], optional = true}
psycopg-pool = {version = ">=3.2", optional = true}
pgvector = {version = ">=0.3", optional = true}

[tool.poetry.extras]
postgres = ["psycopg", "psycopg-pool", "pgvector"]

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-xdist = "^3.6"
matplotlib = "^3.8"
networkx = "^3.2"
testcontainers = "^4.14.2"
mypy = "^1.13"
bump2version = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "no_mock_llm: skip the autouse MemmanLLMClient.complete mock; keep ZDR + embedding stubs",
    "no_scheduler_started_mock: skip the autouse scheduler-started mock; tests run with the real read_state",
    "no_autoseed_fingerprint: skip the autouse meta.embed_fingerprint seed; exercises raw assert_consistent semantics",
    "no_auto_drain: skip the autouse post-write drain wrapper; tests inspect pre-drain queue state",
    "no_default_env: skip the autouse env-file seed; config.get returns None for unset keys",
    "e2e_cli: end-to-end CLI tests run via subprocess against the installed memman; no Docker required",
    "e2e_container: end-to-end tests that build/run a Docker container via testcontainers",
    "systemd: tests that require systemd-as-PID-1 (privileged container); opt-in only",
    "requires_live_keys: tests requiring real MEMMAN_OPENROUTER_API_KEY + MEMMAN_VOYAGE_API_KEY; fail loud under MEMMAN_E2E_REQUIRE_LIVE=1",
    "postgres: tests requiring the pgvector testcontainer (install via memman[postgres])",
]
